--- a/FormApp/app/src/main/AndroidManifest.xml
+++ b/FormApp/app/src/main/AndroidManifest.xml
@@ -10,13 +10,13 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Form">
+        android:theme="@style/WhiteTheme"> <!-- Apply the custom white theme -->
+
         <activity android:name=".MainActivity"
             android:exported="true">
         </activity>
