--- a/FormApp/app/src/main/AndroidManifest.xml
+++ b/FormApp/app/src/main/AndroidManifest.xml
@@ -5,9 +5,12 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:allowBackup="true"
@@ -15,21 +18,29 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/WhiteTheme"> <!-- Apply the custom white theme -->
-
-        <activity android:name=".MainActivity"
-            android:exported="true">
-        </activity>
+        android:theme="@style/WhiteTheme">
+        <activity
+            android:name=".FaceBookActivity"
+            android:exported="false" />
+        <!-- Apply the custom white theme -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"></activity>
         <activity android:name=".DisplayDetailsActivity" />
-        <activity android:name=".PagerActivity"
+        <activity
+            android:name=".PagerActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginOption"   >
+        <activity android:name=".LoginOption"></activity>
 
-        </activity>
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_client_token"/>
     </application>
+
 </manifest>
