--- a/FormApp/app/src/main/AndroidManifest.xml
+++ b/FormApp/app/src/main/AndroidManifest.xml
@@ -18,27 +18,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/WhiteTheme">
+        android:theme="@style/CustomTheme">
+
         <activity
             android:name=".FaceBookActivity"
             android:exported="false" />
         <!-- Apply the custom white theme -->
         <activity
-            android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:name=".MainActivity"></activity>
         <activity android:name=".DisplayDetailsActivity" />
         <activity
             android:name=".PagerActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".LoginOption"></activity>
-
-
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
         <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_client_token"/>
     </application>
