--- a/FormApp/app/src/main/AndroidManifest.xml
+++ b/FormApp/app/src/main/AndroidManifest.xml
@@ -23,10 +23,13 @@
         <activity
             android:name=".FaceBookActivity"
             android:exported="false" />
-        <!-- Apply the custom white theme -->
+
         <activity
-            android:name=".MainActivity"></activity>
+            android:name=".MainActivity"
+            android:exported="false" />
+
         <activity android:name=".DisplayDetailsActivity" />
+
         <activity
             android:name=".PagerActivity"
             android:exported="true">
@@ -35,7 +38,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginOption"></activity>
+
+        <activity android:name=".LoginOption" android:exported="false" />
+
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
         <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/facebook_client_token"/>
     </application>
